--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -994,16 +994,16 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-toggle-hover-bg">@navbar-inverse-toggle-hover-bg</label>
-    <input class="form-control" id="input-@navbar-inverse-toggle-hover-bg" type="text" value="@gray-light" data-var="@navbar-inverse-toggle-hover-bg"/>
+    <input class="form-control" id="input-@navbar-inverse-toggle-hover-bg" type="text" value="@gray-lighter" data-var="@navbar-inverse-toggle-hover-bg"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-toggle-icon-bar-bg">@navbar-inverse-toggle-icon-bar-bg</label>
-    <input class="form-control" id="input-@navbar-inverse-toggle-icon-bar-bg" type="text" value="@white-color" data-var="@navbar-inverse-toggle-icon-bar-bg"/>
+    <input class="form-control" id="input-@navbar-inverse-toggle-icon-bar-bg" type="text" value="@gray-light" data-var="@navbar-inverse-toggle-icon-bar-bg"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-toggle-border-color">@navbar-inverse-toggle-border-color</label>
-    <input class="form-control" id="input-@navbar-inverse-toggle-border-color" type="text" value="@gray-light" data-var="@navbar-inverse-toggle-border-color"/>
+    <input class="form-control" id="input-@navbar-inverse-toggle-border-color" type="text" value="@gray-lighter" data-var="@navbar-inverse-toggle-border-color"/>
   </div>
 </div>
 <h2 id="navs">Navs</h2>
