--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -64,4 +64,4 @@
 @import "ku-datatables.less";
 @import "ku-datetimepicker.less";
 @import "ku-misc.less";
-@import "ku-gridboxes.less";
+//@import "ku-gridboxes.less";
