--- a/less/variables.less
+++ b/less/variables.less
@@ -456,9 +456,9 @@
 @navbar-inverse-brand-hover-bg:             transparent;
 
 // Inverted navbar toggle
-@navbar-inverse-toggle-hover-bg:            @gray-light;
-@navbar-inverse-toggle-icon-bar-bg:         @white-color;
-@navbar-inverse-toggle-border-color:        @gray-light;
+@navbar-inverse-toggle-hover-bg:            @gray-lighter;
+@navbar-inverse-toggle-icon-bar-bg:         @gray-light;
+@navbar-inverse-toggle-border-color:        @gray-lighter;
 
 
 //== Navs
