--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -280,20 +280,22 @@
   }
 
   .leftmenu-toggle {
-    padding: 7px 10px;
-    background-color: @gray-light;
+    padding: 5px;
+    background-color: @white-color;
+    .opacity(.8);
     position: fixed;
-    top: 0;
-    right: 8px;
+    bottom: 0;
+    left: 0;
     z-index: 1040;
 
-    &:active {
-        background-color: @gray-darker;
+    &:hover, &:active {
+        background-color: @navbar-inverse-toggle-hover-bg;
+        .opacity(.8);
     }
   }
 
-  .globalmenu-toggle {
-    margin-right: 0;
-    margin-right: -5px;
-  }
+  // .globalmenu-toggle {
+  //   margin-right: 0;
+  //   margin-right: -5px;
+  // }
 }
