--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -998,7 +998,7 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-toggle-icon-bar-bg">@navbar-inverse-toggle-icon-bar-bg</label>
-    <input class="form-control" id="input-@navbar-inverse-toggle-icon-bar-bg" type="text" value="@gray-light" data-var="@navbar-inverse-toggle-icon-bar-bg"/>
+    <input class="form-control" id="input-@navbar-inverse-toggle-icon-bar-bg" type="text" value="@ku-red" data-var="@navbar-inverse-toggle-icon-bar-bg"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
