--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -16,10 +16,10 @@
           <li><a class="eng" href="#">English</a></li>
         </ul>
       </div>
-      <a id="btn_left" href="#mobileleftmenu" class="navbar-toggle leftmenu-toggle" role="button">
+      <a id="hamburger" href="#mobileleftmenu" class="navbar-toggle leftmenu-toggle" role="button">
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <!-- <span class="icon-bar"></span>
+        <span class="icon-bar"></span> -->
         <span class="sr-only">Toggle navigation</span>
       </a>
     </div>
