--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -261,15 +261,17 @@
         }
 
         ul li a {
-            padding: 5px 5px 5px 13px;
+          padding: 5px 5px 5px 13px;
+
           &::before {
             top: 5px;
           }
         }
       }
     }
+
     .menu-seperator {
-        margin: @margin10 0;
+      margin: @margin10 0;
     }
   }
 }
@@ -280,22 +282,82 @@
   }
 
   .leftmenu-toggle {
-    padding: 5px;
-    background-color: @white-color;
-    .opacity(.8);
     position: fixed;
     bottom: 0;
     left: 0;
     z-index: 1040;
+    .backgroundColorFix(@white-color, .6);
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    width: 38px;
+    height: 35px;
+    transition: background 0.3s;
 
-    &:hover, &:active {
-        background-color: @navbar-inverse-toggle-hover-bg;
-        .opacity(.8);
+    &:active,
+    &:hover {
+      .backgroundColorFix(@navbar-inverse-toggle-hover-bg, .6);
+    }
+
+    &:focus {
+      outline: none;
+    }
+
+    .icon-bar {
+      position: absolute;
+      top: 15px;
+      left: 4px;
+      right: 5px;
+      height: 4px;
+      width: auto;
+      background: inherit;
+      transition: transform 0.3s;
+
+      &:after,
+      &:before {
+        position: absolute;
+        display: block;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background-color: inherit;
+        content: "";
+      }
+
+      &:before {
+        top: -9px;
+        transform-origin: top left;
+        transition: transform 0.3s, width 0.3s, top 0.3s;
+      }
+
+      &:after {
+        bottom: -9px;
+        transform-origin: bottom left;
+        transition: transform 0.3s, width 0.3s, bottom 0.3s;
+      }
+    }
+    // active state, i.e. menu open
+    &.is-active {
+      background-color: @gray-lighter;
+
+      .icon-bar {
+        transform: rotate(180deg);
+
+        &:after,
+        &:before {
+          width: 50%;
+        }
+
+        &:before {
+          top: 0;
+          transform: translateX(-4px) translateY(2px) rotate(-45deg);
+        }
+
+        &:after {
+          bottom: 0;
+          transform: translateX(-4px) translateY(-2px) rotate(45deg);
+        }
+      }
     }
   }
-
-  // .globalmenu-toggle {
-  //   margin-right: 0;
-  //   margin-right: -5px;
-  // }
 }
