--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -3,12 +3,12 @@
 // --------------------------------------------------
 
 .local-menu {
+  font-size: @font-size-large;
   color: @white-color;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   padding: @padding10 @padding10 @padding10 @padding20;
-  margin-left: @margin20!important;
   background: @ku-red;
   border-bottom: 1px solid lighten(@ku-red, 7%);
 
