--- a/less/variables.less
+++ b/less/variables.less
@@ -457,7 +457,7 @@
 
 // Inverted navbar toggle
 @navbar-inverse-toggle-hover-bg:            @gray-lighter;
-@navbar-inverse-toggle-icon-bar-bg:         @gray-light;
+@navbar-inverse-toggle-icon-bar-bg:         @ku-red;
 @navbar-inverse-toggle-border-color:        @gray-lighter;
 
 
