--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -34,6 +34,15 @@
     <input class="form-control" id="input-@white-color" type="text" value="#fff" data-var="@white-color"/>
   </div>
   <div class="col-xs-4">
+    <label for="input-@ku-footer-icon-bg">@ku-footer-icon-bg</label>
+    <input class="form-control" id="input-@ku-footer-icon-bg" type="text" value="#666" data-var="@ku-footer-icon-bg"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@ku-footer-icon-size">@ku-footer-icon-size</label>
+    <input class="form-control" id="input-@ku-footer-icon-size" type="text" value="28px" data-var="@ku-footer-icon-size"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
     <label for="input-@ku-red">@ku-red</label>
     <input class="form-control" id="input-@ku-red" type="text" value="#901a1e" data-var="@ku-red"/>
   </div>
@@ -41,11 +50,11 @@
     <label for="input-@ku-red-hover">@ku-red-hover</label>
     <input class="form-control" id="input-@ku-red-hover" type="text" value="#7b161a" data-var="@ku-red-hover"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@hum">@hum</label>
     <input class="form-control" id="input-@hum" type="text" value="#365aa5" data-var="@hum"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@hum-hover">@hum-hover</label>
     <input class="form-control" id="input-@hum-hover" type="text" value="#304f91" data-var="@hum-hover"/>
@@ -54,11 +63,11 @@
     <label for="input-@science">@science</label>
     <input class="form-control" id="input-@science" type="text" value="#46743c" data-var="@science"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@science-hover">@science-hover</label>
     <input class="form-control" id="input-@science-hover" type="text" value="#395e31" data-var="@science-hover"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@sund">@sund</label>
     <input class="form-control" id="input-@sund" type="text" value="#2a216a" data-var="@sund"/>
@@ -67,11 +76,11 @@
     <label for="input-@sund-hover">@sund-hover</label>
     <input class="form-control" id="input-@sund-hover" type="text" value="#1b1545" data-var="@sund-hover"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@samf">@samf</label>
     <input class="form-control" id="input-@samf" type="text" value="#e13718" data-var="@samf"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@samf-hover">@samf-hover</label>
     <input class="form-control" id="input-@samf-hover" type="text" value="#cc3216" data-var="@samf-hover"/>
@@ -80,11 +89,11 @@
     <label for="input-@jura">@jura</label>
     <input class="form-control" id="input-@jura" type="text" value="#999632" data-var="@jura"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@jura-hover">@jura-hover</label>
     <input class="form-control" id="input-@jura-hover" type="text" value="#85822c" data-var="@jura-hover"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@teol">@teol</label>
     <input class="form-control" id="input-@teol" type="text" value="#66609e" data-var="@teol"/>
@@ -93,11 +102,11 @@
     <label for="input-@teol-hover">@teol-hover</label>
     <input class="form-control" id="input-@teol-hover" type="text" value="#565185" data-var="@teol-hover"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@brand-primary">@brand-primary</label>
     <input class="form-control" id="input-@brand-primary" type="text" value="darken(#428bca, 6.5%)" data-var="@brand-primary"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@brand-success">@brand-success</label>
     <input class="form-control" id="input-@brand-success" type="text" value="#5cb85c" data-var="@brand-success"/>
@@ -106,11 +115,11 @@
     <label for="input-@brand-info">@brand-info</label>
     <input class="form-control" id="input-@brand-info" type="text" value="#5bc0de" data-var="@brand-info"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@brand-warning">@brand-warning</label>
     <input class="form-control" id="input-@brand-warning" type="text" value="#f0ad4e" data-var="@brand-warning"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@brand-danger">@brand-danger</label>
     <input class="form-control" id="input-@brand-danger" type="text" value="#d9534f" data-var="@brand-danger"/>
@@ -994,11 +1003,11 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-toggle-hover-bg">@navbar-inverse-toggle-hover-bg</label>
-    <input class="form-control" id="input-@navbar-inverse-toggle-hover-bg" type="text" value="@gray-lighter" data-var="@navbar-inverse-toggle-hover-bg"/>
+    <input class="form-control" id="input-@navbar-inverse-toggle-hover-bg" type="text" value="@gray-darker" data-var="@navbar-inverse-toggle-hover-bg"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-toggle-icon-bar-bg">@navbar-inverse-toggle-icon-bar-bg</label>
-    <input class="form-control" id="input-@navbar-inverse-toggle-icon-bar-bg" type="text" value="@ku-red" data-var="@navbar-inverse-toggle-icon-bar-bg"/>
+    <input class="form-control" id="input-@navbar-inverse-toggle-icon-bar-bg" type="text" value="@white-color" data-var="@navbar-inverse-toggle-icon-bar-bg"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
