--- a/less/variables.less
+++ b/less/variables.less
@@ -14,7 +14,10 @@
 @gray-light:             #777;
 @gray-lighter:           #eee;
 
-@white-color:             #fff;
+@white-color:            #fff;
+
+@ku-footer-icon-bg:      #666;
+@ku-footer-icon-size:    28px;
 
 // KU specific colors
 
@@ -456,8 +459,8 @@
 @navbar-inverse-brand-hover-bg:             transparent;
 
 // Inverted navbar toggle
-@navbar-inverse-toggle-hover-bg:            @gray-lighter;
-@navbar-inverse-toggle-icon-bar-bg:         @ku-red;
+@navbar-inverse-toggle-hover-bg:            @gray-darker;
+@navbar-inverse-toggle-icon-bar-bg:         @white-color;
 @navbar-inverse-toggle-border-color:        @gray-lighter;
 
 
