--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -18,8 +18,8 @@
       </div>
       <a id="hamburger" href="#mobileleftmenu" class="navbar-toggle leftmenu-toggle" role="button">
         <span class="icon-bar"></span>
-        <!-- <span class="icon-bar"></span>
-        <span class="icon-bar"></span> -->
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
         <span class="sr-only">Toggle navigation</span>
       </a>
     </div>
