--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -145,11 +145,11 @@
       margin: 0.5em 0.3em 0 0;
 
       .social-icon {
-        width: 28px;
-        height: 28px;
+        width: @ku-footer-icon-size;
+        height: @ku-footer-icon-size;
         background-repeat: no-repeat;
         background-position: center center;
-        background-color: #757575;
+        background-color: @ku-footer-icon-bg;
         border-radius: 100%;
         display: flex;
         align-items: center;
@@ -252,7 +252,7 @@
         }
 
         &:active, &:focus {
-          background-color: #757575;
+          background-color: @ku-footer-icon-bg;
         }
       }
     }
@@ -288,8 +288,6 @@
         }
 
         .footer-heading {
-          font-weight: 700;
-          font-size: @font-size-large;
           cursor: pointer;
           position: relative;
           padding: 12px 25px 12px 20px;
@@ -402,7 +400,6 @@
         .social-icon {
           width: 35px;
           height: 35px;
-          background-color: #666;
         }
       }
     }
