--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -5,7 +5,7 @@
   <div class="container-fluid globalfooter">
     <div class="container">
       <div class="row footercontent" role="menubar">
-        <div class="col-sm-3 footercolumn">
+        <div class="col-xs-3 footercolumn">
           <h3 data-heading="toggle" class="footer-heading hidden-xs">Københavns Universitet</h3>
           <h3 data-heading="toggle" class="footer-heading visible-xs-block">Organisation</h3>
           <ul class="footerlinks" role="menu">
@@ -20,7 +20,7 @@
             <li role="menuitem"><a href="http://velkommen.ku.dk/besoeg/museer">Museer</a></li>
           </ul>
         </div>
-        <div class="col-sm-3 footercolumn">
+        <div class="col-xs-3 footercolumn">
           <h3 data-heading="toggle" class="footer-heading">Kontakt</h3>
           <ul class="footerlinks" role="menu">
             <li role="menuitem"><a href="http://findvej.ku.dk">Find vej</a></li>
@@ -36,7 +36,7 @@
             <li role="menuitem"><a href="http://oko.ku.dk">CVR, EAN og bankoplysninger</a></li>
           </ul>
         </div>
-        <div class="col-sm-3 footercolumn">
+        <div class="col-xs-3 footercolumn">
           <h3 data-heading="toggle" class="footer-heading">For studerende og ansatte</h3>
           <ul class="footerlinks" role="menu">
             <li role="menuitem"><a class="padlock" href="http://intranet.ku.dk">KUnet</a></li>
@@ -52,7 +52,7 @@
             <li role="menuitem"><a href="http://akut.ku.dk">KU's sikkerhedsberedskab</a></li>
           </ul>
         </div>
-        <div class="col-sm-3 footercolumn">
+        <div class="col-xs-3 footercolumn">
           <h3 data-heading="toggle" class="footer-heading">Web</h3>
           <ul class="footerlinks" role="menu">
             <li role="menuitem"><a href="http://velkommen.ku.dk/om-webstedet">Om websitet</a></li>
