--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -64,4 +64,5 @@
 @import "ku-datatables.less";
 @import "ku-datetimepicker.less";
 @import "ku-misc.less";
+@import "ku-privacypolicy.less";
 //@import "ku-gridboxes.less";
