--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -2,6 +2,7 @@
 // KU top branding
 .ku-branding {
   background-color: @white-color;
+  position: relative;
   .ku-branding-logo {
     height: @ku-branding-box-height;
     width: 61px;
