--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -1,7 +1,7 @@
 //
 // KU left menu
 // --------------------------------------------------
-@media screen and (min-width: @screen-sm-min) {
+@media screen and (min-width: @screen-xs-max) {
   .ku-leftmenu {
     .ku-navbar-header {
       font-weight: bold;
