--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -31,6 +31,7 @@
     <!-- Ku top navigation -->
     {% include nav/ku-nav.html %}
     {{ content }}
+    {% include ku-privacypolicy.html %}
     {% include global-footer.html %}
   </body>
 </html>
