--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -65,4 +65,4 @@
 @import "ku-datetimepicker.less";
 @import "ku-misc.less";
 @import "ku-privacypolicy.less";
-//@import "ku-gridboxes.less";
+@import "ku-gridboxes.less";
