--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -47,7 +47,26 @@
             <li><a href="#">Find en forsker</a></li>
           </ul>
         </li>
-        <li><a href="#">Nyheder</a></li>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Nyheder</a>
+            <ul class="dropdown-menu nyheder">
+                <li>
+                    <img src="http://placehold.it/55x55" alt="">
+                    <a href="#">Danmarks rigshospital for dyr slår dørene op</a>
+                    <div class="small">16. marts 2011</div>
+                </li>
+                <li>
+                    <img src="http://placehold.it/55x55" alt="">
+                    <a href="#">Gode karakterer til studiemiljøet</a>
+                    <div class="small">8. marts 2011</div>
+                </li>
+                <li>
+                    <img src="http://placehold.it/55x55" alt="">
+                    <a href="#">KU beklager behandling af studerende</a>
+                    <div class="small">7. marts 2011</div>
+                </li>
+                <li><a href="http://nyheder.ku.dk/">Alle nyheder</a></li>
+            </ul>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Samarbejde</a>
           <ul class="dropdown-menu">
