--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -60,6 +60,7 @@
 @import "ku-leftmenu.less";
 @import "ku-mobile-menu.less";
 @import "ku-footer.less";
+@import "ku-news.less";
 @import "ku-bxslider.less";
 @import "ku-datatables.less";
 @import "ku-datetimepicker.less";
