--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -11,12 +11,6 @@
     padding: 5px;
     border-bottom: 1px dotted #ccc;
 
-    &:last-child {
-      overflow: visible;
-      padding-left: 10px;
-      border-bottom: 0;
-    }
-
     a {
       display: inline;
       white-space: normal;
@@ -25,6 +19,16 @@
       &:focus,
       &:hover {
         background-color: transparent;
+      }
+    }
+
+    &:last-child {
+      overflow: visible;
+      padding-left: 10px;
+      border-bottom: 0;
+
+      a {
+        display: block;
       }
     }
 
@@ -39,8 +43,9 @@
     }
 
     .small {
-      margin-top: 2px;
+      margin-top: 3px;
       font-size: 10px;
+      color: @gray-light;
     }
     @media (max-width: @screen-xs-max) {
       line-height: 1.29em;
