--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -66,4 +66,4 @@
 @import "ku-datetimepicker.less";
 @import "ku-misc.less";
 @import "ku-privacypolicy.less";
-@import "ku-gridboxes.less";
+//@import "ku-gridboxes.less";
