--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -113,7 +113,7 @@
           &::before {
             position: absolute;
             left: 0;
-            top: 5px;
+            top: 3px;
           }
         }
       }
@@ -241,7 +241,7 @@
     }
 
     .menu-seperator {
-      margin: @grid-gutter-width 0 @margin20;
+      margin: @margin20 0;
     }
   }
 }
