--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -84,6 +84,7 @@
 }
 
 .gridbox {
+  width: 100%;
   position: relative;
   line-height: @line-height-base;
   border-radius: 2px;
@@ -2148,9 +2149,9 @@
     .header {
       color: inherit;
       font-size: 1.2em;
+      text-transform: uppercase;
       padding: 8px 15px 6px @padding10;
       font-weight: 700;
-      text-transform: uppercase;
       letter-spacing: 0.4px;
       width: 100%;
     }
@@ -2161,18 +2162,28 @@
     order: 2;
     flex: 1 1 auto;
   }
+  // Add an arrow to the box
+  &::before {
+    display: inline-block;
+    font-family: 'arrow';
+    content: '\0043';
+    color: @white-color;
+    bottom: 9px;
+    right: @margin10;
+    position: absolute;
+    z-index: 5;
+  }
 
   &.with-img {
-    // Boxes with media
+    // Boxes with img
     .box2 {
       position: relative;
       padding: 0 !important;
       overflow: hidden;
       transform-style: preserve-3d;
 
-      iframe,
       img {
-        // media inside the box adjusted by height and centered
+        // Img inside the box adjusted by height and centered
         display: block;
         backface-visibility: hidden;
         max-width: 100%;
@@ -2244,17 +2255,6 @@
       color: inherit;
     }
   }
-  // Add an arrow to the box
-  &::before {
-    display: inline-block;
-    font-family: 'arrow';
-    content: '\0043';
-    color: @white-color;
-    bottom: 9px;
-    right: @margin10;
-    position: absolute;
-    z-index: 5;
-  }
   // Height 298px
   &.size1 {
     height: @gridbox1;
@@ -2269,7 +2269,6 @@
         .header-small {
           color: @gray-light;
           font-weight: bold;
-          text-transform: uppercase;
           margin: 5px 0;
 
           .date {
@@ -2280,12 +2279,14 @@
 
         .header {
           font-size: 1.2em;
-          line-height: 1.3em;
+          line-height: 1.399em;
+          text-transform: none;
           padding: 0;
-          margin: 3px 0 5px;
+          margin: 10px 0 5px;
         }
 
         .text {
+          display: none;
           font-size: 1.1em;
           font-weight: 400;
           line-height: 1.45em;
@@ -2298,7 +2299,7 @@
     .box2 {
       order: 1;
       // image height
-      flex: 0 1 120px;
+      flex: 0 1 133px;
     }
 
     &:before {
@@ -2676,16 +2677,14 @@
         .box2 {
           order: 1;
         }
-        //background: transparent!important;
       }
     }
   }
 }
-// Switch img and text for 2/3 column boxes
+// 2/3 columns
 
 .one-two-column .column2,
 .two-one-column .column1 {
-  // 2/3 columns span
   .size2,
   .size3 {
     &.with-img {
@@ -2708,6 +2707,20 @@
   .size3 {
     .text {
       display: none;
+    }
+  }
+
+  .size1 {
+    &.with-img {
+      .text {
+        // Hide text part
+        display: none;
+      }
+
+      .box2 {
+        // image height
+        flex: 0 1 185px;
+      }
     }
   }
 }
@@ -3022,18 +3035,53 @@
   }
 }
 @media only screen and (min-width: 870px) {
+  // Display text for full width .size1 boxes
+  .single-column .column1 {
+    .size1 {
+      flex-direction: row;
+
+      &.with-img {
+        .box1 {
+          padding-left: 15px;
+          flex: 0 1 236px;
+          order: 2;
+
+          .text {
+            // Display text in desktop
+            display: block;
+          }
+        }
+
+        .box2 {
+          // Flip image to the left
+          flex: 1;
+          order: 1;
+
+          img {
+            max-width: 101%!important;
+          }
+        }
+      }
+    }
+  }
   // Header styling for single column boxes
   .one-two-column .column1,
   .triple-column [class*=column],
   .two-one-column .column2 {
+    .size1 {
+      &.with-img {
+        .box2 {
+          img {
+            max-height: 100%;
+            width: auto;
+            max-width: none!important;
+          }
+        }
+      }
+    }
+
     .size2,
     .size3 {
-      //   &.outlined,
-      //   &.with-img {
-      //     &:hover {
-      //       border-width: 0;
-      //     }
-      //   }
       &.full,
       &.outlined,
       &.with-img {
@@ -3081,6 +3129,14 @@
   }
 
   .double-column [class*=column] {
+    .size1 {
+      &.with-img {
+        .box2 {
+          flex: 0 1 185px;
+        }
+      }
+    }
+
     .size2,
     .size3 {
       &.outlined,
@@ -3162,7 +3218,21 @@
     }
   }
 }
-@media only screen and (min-width: 869px) and (max-width: 1024px) {
+@media only screen and (max-width: 869px) {
+  &.size1 {
+    &.with-img {
+      .box2 {
+        flex: 0 1 185px;
+
+        img {
+          max-width: 145%!important;
+          height: auto;
+        }
+      }
+    }
+  }
+}
+@media only screen and (min-width: 870px) and (max-width: 1024px) {
   // All single culumns
   .one-two-column .column1,
   .triple-column [class*=column],
@@ -3188,11 +3258,16 @@
         }
       }
     }
+  }
+}
+@media only screen and (min-width: 870px) and (max-width: 1077px) {
+  //Full width columns
+  .single-column .column1 {
     .size1 {
       &.with-img {
         .box2 {
           img {
-            max-width: 121%!important;
+            max-width: 145%!important;
             height: auto;
           }
         }
@@ -3200,19 +3275,27 @@
     }
   }
 }
-
-// Media query for .size1 boxes only in order to make image fit
-@media only screen and (min-width: 610px) and (max-width: 680px) {
-    .size1 {
-        .box2 {
-            img {
-                transform: translateY(-50%) translateX(-50%) scale(1.15)!important;
-            }
+@media only screen and (min-width: 600px) and (max-width: 680px) {
+  &.size1 {
+    &.with-img {
+      .box2 {
+        img {
+          transform: translateY(-50%) translateX(-50%) scale(1.14);
         }
+      }
     }
+  }
 }
-
 @media only screen and (min-width: 460px) and (max-width: 870px) {
+  //Fix for iframe centering in .size1 boxes
+  &.size1 {
+    .box2 {
+      iframe {
+        position: absolute;
+        top: -20%!important;
+      }
+    }
+  }
   // All single, 2/3 and double comlumn boxes with image
   .double-column [class*=column],
   .one-two-column .column1,
@@ -3749,6 +3832,14 @@
 @media only screen and (max-width: 459px) {
   // All column types must behave like single column boxes
   .gcrow .gccolumn .gridbox {
+    &.size1 {
+      &.with-img {
+        .box2 {
+          flex: 0 1 133px;
+        }
+      }
+    }
+
     &.size2,
     &.size3 {
       &.with-img {
@@ -3779,7 +3870,6 @@
 
           .header {
             width: 100%;
-            //text-overflow: ellipsis;
             border-right: 25px solid transparent;
             white-space: nowrap;
             overflow: hidden;
