--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -2269,6 +2269,8 @@
         .header-small {
           color: @gray-light;
           font-weight: bold;
+          text-transform: uppercase;
+          letter-spacing: 0.4px;
           margin: 5px 0;
 
           .date {
@@ -2278,11 +2280,12 @@
         }
 
         .header {
-          font-size: 1.2em;
+          color: @ku-news-gray;
+          font-size: 1.5em;
           line-height: 1.399em;
           text-transform: none;
           padding: 0;
-          margin: 10px 0 5px;
+          margin: 15px 0 5px;
         }
 
         .text {
@@ -2291,7 +2294,7 @@
           font-weight: 400;
           line-height: 1.45em;
           padding: 0 15px 5px 0;
-          color: @ku-gridbox-text;
+          color: @gray-dark;
         }
       }
     }
@@ -3039,16 +3042,31 @@
   .single-column .column1 {
     .size1 {
       flex-direction: row;
+      background: @white-color;
 
       &.with-img {
         .box1 {
           padding-left: 24px;
+          padding-right: 0;
           flex: 0 1 51.6%;
+          max-width: 390px; // preventing that too much text will expand this box
           order: 2;
+
+          .header-small {
+            margin: 0;
+          }
+
+          .header {
+            font-size: 3em;
+            font-weight: normal;
+            line-height: 1.11111em;
+          }
 
           .text {
             // Display text in desktop
             display: block;
+            font-size: 1.18em;
+            padding: 5px 0;
           }
         }
 
@@ -3059,7 +3077,33 @@
 
           img {
             max-width: none!important;
+            max-height: 100%;
           }
+        }
+
+        &:hover {
+        // New sort of underlining :-)
+          .header {
+            > span {
+              background-image: linear-gradient(rgba(74, 73, 73, 0.25) 0%, @gray-dark 100%);
+              background-repeat: repeat-x;
+              background-size: 1px 1px;
+              background-position: 0 93%;
+              text-shadow: 3px 0 @white-color, 2px 0 @white-color, 1px 0 @white-color, -1px 0 @white-color, -2px 0 @white-color, -3px 0 @white-color;
+            }
+          }
+        }
+      }
+      // Flip image to the right
+      &.img-flip-right {
+        .box1 {
+          padding-left: 0;
+          padding-right: 24px;
+        }
+
+        .box2 {
+          flex: 1;
+          order: 2;
         }
       }
     }
@@ -3253,8 +3297,8 @@
       &.with-img {
         .box2 {
           img {
-            max-width: 184%!important;
-            height: auto;
+            max-height: 100%!important;
+            width: auto;
           }
         }
       }
