--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -102,8 +102,11 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
+{% if page.slug == 'examples' %}
 <!-- Mobile menu -->
 <script type="text/javascript" src="../../assets/js/mmenu/jquery.mmenu.all.min.js"></script>
+<script src="../../custom/ku-mobile-menu.js"></script>
+{% endif %}
 {% if site.github %}
 <script src="../dist/js/bootstrap.min.js"></script>
 {% elsif page.slug == 'examples' %}
