--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -137,182 +137,184 @@
     }
   }
 
-  td {
-    &.new,
-    &.old {
-      span {
-        color: @btn-link-disabled-color;
-      }
+  .new,
+  .old {
+    span {
+      color: @btn-link-disabled-color;
     }
+  }
 
-    &.day:not(.active):hover,
-    &.focused {
+  .day {
+    cursor: pointer;
+
+    &.focused,
+    &:not(.active):hover {
       span {
         background: @gray-lighter;
         color: inherit;
         cursor: pointer;
       }
     }
+  }
 
-    &.old {
-      &:hover {
-        span {
-          cursor: default;
-        }
-      }
-    }
-
-    &.disabled,
-    &.disabled:hover {
+  .old {
+    &:hover {
       span {
-        background: none;
-        color: @btn-link-disabled-color;
         cursor: default;
       }
     }
+  }
 
-    &.highlighted {
-      span {
-        @highlighted-bg: @state-info-bg;
-        .button-variant(#000, @highlighted-bg, darken(@highlighted-bg, 20%));
-        border-radius: 0;
-
-        &.focused {
-          background: darken(@highlighted-bg, 10%);
-        }
-
-        &.disabled,
-        &.disabled:active {
-          background: @highlighted-bg;
-          color: @btn-link-disabled-color;
-        }
-      }
+  .disabled,
+  .disabled:hover {
+    span {
+      background: none;
+      color: @btn-link-disabled-color;
+      cursor: default;
     }
+  }
 
-    &.today {
-      span {
-        @today-bg: lighten(orange, 30%);
-        .button-variant(#000, @today-bg, darken(@today-bg, 20%));
-
-        &.focused {
-          background: darken(@today-bg, 10%);
-        }
-
-        &.disabled,
-        &.disabled:active {
-          background: @today-bg;
-          color: @btn-link-disabled-color;
-        }
-      }
-    }
-
-    &.range {
-      span {
-        @range-bg: @gray-lighter;
-        .button-variant(#000, @range-bg, darken(@range-bg, 20%));
-        border-radius: 0;
-
-        &.focused {
-          background: darken(@range-bg, 10%);
-        }
-
-        &.disabled,
-        &.disabled:active {
-          background: @range-bg;
-          color: @btn-link-disabled-color;
-        }
-      }
-    }
-
-    &.range.highlighted {
-      @range-highlighted-bg: mix(@state-info-bg, @gray-lighter, 50%);
-      .button-variant(#000, @range-highlighted-bg, darken(@range-highlighted-bg, 20%));
+  .highlighted {
+    span {
+      @highlighted-bg: @state-info-bg;
+      .button-variant(#000, @highlighted-bg, darken(@highlighted-bg, 20%));
+      border-radius: 0;
 
       &.focused {
-        background: darken(@range-highlighted-bg, 10%);
+        background: darken(@highlighted-bg, 10%);
       }
 
       &.disabled,
       &.disabled:active {
-        background: @range-highlighted-bg;
+        background: @highlighted-bg;
         color: @btn-link-disabled-color;
       }
     }
+  }
 
-    &.range.today {
-      span {
-        @range-today-bg: mix(orange, @gray-lighter, 50%);
-        .button-variant(#000, @range-today-bg, darken(@range-today-bg, 20%));
-
-        &.disabled,
-        &.disabled:active {
-          background: @range-today-bg;
-          color: @btn-link-disabled-color;
-        }
-      }
-    }
-
-    &.selected,
-    &.selected.highlighted {
-      span {
-        .button-variant(#fff, @gray-light, @gray);
-      }
-    }
-
-    &.active,
-    &.active.highlighted {
-      span {
-        color: #fff;
-        background-color: @datepicker-active-date-bg;
-
-        &:hover {
-          color: #fff;
-          background-color: @datepicker-active-date-bg-hover;
-          cursor: pointer;
-        }
-
-        a {
-          color: inherit;
-          display: block;
-
-          &:hover {
-            text-decoration: none;
-          }
-        }
-      }
-    }
-
+  .today {
     span {
-      border-radius: 50%;
-      line-height: 30px;
-      display: block;
-      width: 30px;
-      height: 30px;
+      @today-bg: lighten(orange, 30%);
+      .button-variant(#000, @today-bg, darken(@today-bg, 20%));
 
-      &.focused,
-      &:hover {
-        background: @gray-lighter;
+      &.focused {
+        background: darken(@today-bg, 10%);
       }
 
       &.disabled,
-      &.disabled:hover {
-        background: none;
+      &.disabled:active {
+        background: @today-bg;
         color: @btn-link-disabled-color;
-        cursor: default;
+      }
+    }
+  }
+
+  .range {
+    span {
+      @range-bg: @gray-lighter;
+      .button-variant(#000, @range-bg, darken(@range-bg, 20%));
+      border-radius: 0;
+
+      &.focused {
+        background: darken(@range-bg, 10%);
       }
 
-      &.active,
-      &.active.disabled,
-      &.active.disabled:hover,
-      &.active:hover {
+      &.disabled,
+      &.disabled:active {
+        background: @range-bg;
+        color: @btn-link-disabled-color;
+      }
+    }
+  }
+
+  .range.highlighted {
+    @range-highlighted-bg: mix(@state-info-bg, @gray-lighter, 50%);
+    .button-variant(#000, @range-highlighted-bg, darken(@range-highlighted-bg, 20%));
+
+    &.focused {
+      background: darken(@range-highlighted-bg, 10%);
+    }
+
+    &.disabled,
+    &.disabled:active {
+      background: @range-highlighted-bg;
+      color: @btn-link-disabled-color;
+    }
+  }
+
+  .range.today {
+    span {
+      @range-today-bg: mix(orange, @gray-lighter, 50%);
+      .button-variant(#000, @range-today-bg, darken(@range-today-bg, 20%));
+
+      &.disabled,
+      &.disabled:active {
+        background: @range-today-bg;
+        color: @btn-link-disabled-color;
+      }
+    }
+  }
+
+  .selected,
+  .selected.highlighted {
+    span {
+      .button-variant(#fff, @gray-light, @gray);
+    }
+  }
+
+  .active,
+  .active.highlighted {
+    span {
+      color: #fff;
+      background-color: @datepicker-active-date-bg;
+
+      &:hover {
         color: #fff;
-        background-color: @datepicker-active-date-bg;
+        background-color: @datepicker-active-date-bg-hover;
+        cursor: pointer;
       }
 
-      &.new,
-      &.old {
-        color: @btn-link-disabled-color;
+      a {
+        color: inherit;
+        display: block;
+
+        &:hover {
+          text-decoration: none;
+        }
       }
+    }
+  }
+
+  span {
+    border-radius: 50%;
+    line-height: 30px;
+    display: block;
+    width: 30px;
+    height: 30px;
+
+    &.focused,
+    &:hover {
+      background: @gray-lighter;
+    }
+
+    &.disabled,
+    &.disabled:hover {
+      background: none;
+      color: @btn-link-disabled-color;
+      cursor: default;
+    }
+
+    &.active,
+    &.active.disabled,
+    &.active.disabled:hover,
+    &.active:hover {
+      color: #fff;
+      background-color: @datepicker-active-date-bg;
+    }
+
+    &.new,
+    &.old {
+      color: @btn-link-disabled-color;
     }
   }
 
